Autentificacion creada rutas protegidas

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,9 +1,14 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
-
+    encoders:
+        UserBundle\Entity\User: bcrypt
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
+        our_db_provider:
+            entity: 
+                class: UserBundle:User
+                property: username
         in_memory:
             memory: ~
 
@@ -15,10 +20,12 @@ security:
 
         main:
             anonymous: ~
-            # activate different ways to authenticate
-
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            #http_basic: ~
-
-            # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+            provider: our_db_provider
+            form_login:
+                login_path: login
+                check_path: login
+            logout: true
+    access_control:
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, roles: [ ROLE_USER , ROLE_ADMIN] }
+        - { path: ^/admin, roles: ROLE_ADMIN }
