--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,12 +1,16 @@
+user_user:
+    resource: "@UserBundle/Controller/UserController.php"
+    type:     annotation
+
+gafas_gafas:
+    resource: "@GafasBundle/Controller/GafasController.php"
+    type:     annotation
+
 api:
     resource: "@ApiBundle/Controller/"
     type:     annotation
     prefix:   /
 
-user:
-    resource: "@UserBundle/Controller/"
-    type:     annotation
-    prefix:   /
 
 gafas:
     resource: "@GafasBundle/Controller/"
@@ -16,3 +20,6 @@ gafas:
 app:
     resource: '@AppBundle/Controller/'
     type: annotation
+
+logout:
+    path: /logout
