--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -27,5 +27,6 @@ security:
             logout: true
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/registro, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/, roles: [ ROLE_USER , ROLE_ADMIN] }
         - { path: ^/admin, roles: ROLE_ADMIN }
