--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -28,11 +28,7 @@ security:
             logout: true
     access_control:
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/registro, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/registro, roles: IS_AUTHENTICATED_ANONYMOUSLY }       
         - { path: ^/admin, roles: ROLE_ADMIN }
-        - { path: ^/, roles: [ ROLE_USER , ROLE_ADMIN] }
-        
-        
-        
-       
-        
+        - { path: ^/carro, roles: [ ROLE_USER , ROLE_ADMIN] }
+        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }   
